fixes: last modification date / etag serialization

--- a/etc/local.ini
+++ b/etc/local.ini
@@ -2,6 +2,8 @@
 use = egg:feed-transformer#app
 debug = True
 
+ifttt.maker_key = cgL4R-RZYpms1mlKM80iZm
+
 [pipeline:main]
 pipeline = feed-transformer
 
